# calculator-webapp

./: .gitignore.swp  README.md  docker-compose.yml
calculator_backend/: CMakeCache.txt  CMakeLists.txt  CalcResourceFactory.cpp  CalcService.cpp  CalcServiceSettingsFactory.cpp  Dockerfile  Makefile  backend.dockerfile  cmake_install.cmake  main.cpp
calculator_backend/include/: CalcResourceFactory.h  CalcService.h  CalcServiceSettingsFactory.h  IResourceFactory.h  IService.h  IServiceSettingsFactory.h
calculator_frontend/: Dockerfile  package-lock.json  package.json
calculator_frontend/src/: App.js  Calculator.js  CalculatorApi.js  CalculatorButton.js  CalculatorDisplay.js  CalculatorPanel.js  index.css
